[tool.poetry]
name = "pyorchestra"
version = "0.4.2"
description = "Orchestra is a job scheduler on top of Celery"
authors = ["András Vidosits <andras@hyperplane.hu>"]
readme = "README.md"
license = "LGPLv3"
repository = "https://github.com/vidosits/orchestra"
packages = [
	{ include = "orchestra" },
]

[tool.poetry.dependencies]
python = "^3.11.7"
celery = "^5.3.6"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
scheduler = "^0.8.5"
pytz = "^2023.3.post1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
